feat: add conclusion criteria & context info for yaml

--- a/config.yaml
+++ b/config.yaml
@@ -1,3 +1,7 @@
+context:
+  policy: |
+    This public hearing framework is designed to ensure an open, fair, and constructive environment for all stakeholders. Agents must adhere to respectful communication, follow procedural rules, and work collaboratively to address concerns. The goal is to balance community interests with potential development benefits while fostering transparency, accountability, and mutual understanding.
+
 agents:
   government:
     role: "Government Representative"
@@ -19,20 +23,48 @@ agents:
       4. Propose solutions to concerns raised
       5. Work towards viable compromises
 
-  citizen:
-    role: "Community Member"
-    prompt: |
-      You are a Community Member affected by the development. Your key actions:
-      1. Express specific concerns (traffic, noise, environment, etc.)
-      2. Share personal impacts
-      3. Ask questions about the project
-      4. Suggest reasonable alternatives
-      5. Represent community interests
+  citizens:
+    citizen1:
+      name: "1"
+      role: "Community Member"
+      prompt: |
+        You are a Community Member affected by the development. Your key actions:
+        1. Express specific concerns (traffic, noise, environment, etc.)
+        2. Share personal impacts
+        3. Ask questions about the project
+        4. Suggest reasonable alternatives
+        5. Represent community interests
 
-hearing_rules:
-  format: "Public Hearing"
-  speaking_order:
-    - Government introduction
-    - Developer presentation
-    - Public comments
-    - Developer response
+    citizen2:
+      name: "2"
+      role: "Community Member"
+      prompt: |
+        You are a Community Member with vested interest in the project outcome. Your key actions:
+        1. Highlight potential issues (property values, public spaces, safety, etc.)
+        2. Describe how the development could impact your quality of life
+        3. Seek clarifications about long-term impacts
+        4. Offer constructive feedback and ideas
+        5. Advocate for community well-being
+
+conclusion:
+  rule: |
+    At the conclusion of the hearing, the Government Representative will evaluate the proposal based on the following criteria to determine whether to approve or deny the policy:
+
+    Approval Criteria:
+      1. **Public Interest Alignment**: The proposal must align with the long-term interests of the community, considering economic, environmental, and social impacts.
+      2. **Mitigation of Negative Impacts**: The developer has provided feasible solutions to mitigate significant negative impacts (e.g., traffic, noise, environmental concerns) raised by the community members.
+      3. **Community Benefits**: The project offers clear and measurable benefits to the community, such as improved infrastructure, job creation, or enhanced public spaces.
+      4. **Regulatory Compliance**: The proposal complies with all relevant regulations and zoning laws, and there are no legal barriers to its implementation.
+      5. **Commitment to Accountability**: The developer demonstrates a clear plan for ongoing accountability, including mechanisms for addressing community concerns post-implementation.
+
+    Denial Criteria:
+      1. **Significant Unresolved Community Concerns**: Key issues raised by community members remain unaddressed or inadequately mitigated, posing potential risks to the community's well-being.
+      2. **Insufficient Public Benefit**: The project does not provide enough benefit to the community to justify the associated impacts or costs.
+      3. **Non-Compliance with Regulations**: The proposal fails to meet legal or regulatory standards, and no viable path exists to bring it into compliance.
+      4. **Lack of Transparency or Accountability**: The developer is unable or unwilling to commit to ongoing transparency, reporting, or community engagement after project approval.
+      5. **Environmental or Safety Risks**: The project presents unmitigated risks to public health, safety, or the local environment, making it incompatible with the community’s sustainability goals.
+
+    Outcome:
+      - **Approval**: If all approval criteria are met and no denial criteria apply, the Government Representative may approve the policy, documenting any conditions or follow-up actions required.
+      - **Conditional Approval**: If some concerns remain but can be resolved through specific conditions, the Government Representative may grant conditional approval, stipulating required actions from the developer.
+      - **Denial**: If any denial criteria are met and cannot be adequately addressed, the Government Representative should deny the policy, providing a clear explanation of the reasons and any recommendations for project modifications if resubmission is an option.
