--- a/config/config.yaml
+++ b/config/config.yaml
@@ -82,20 +82,20 @@ conclusion:
     At the conclusion of the hearing, the Government Representative will evaluate the proposal based on the following criteria to determine whether to approve or deny the policy:
 
     Approval Criteria:
-      1. **Public Interest Alignment**: The proposal must align with the long-term interests of the community, considering economic, environmental, and social impacts.
-      2. **Mitigation of Negative Impacts**: The developer has provided feasible solutions to mitigate significant negative impacts (e.g., traffic, noise, environmental concerns) raised by the community members.
-      3. **Community Benefits**: The project offers clear and measurable benefits to the community, such as improved infrastructure, job creation, or enhanced public spaces.
-      4. **Regulatory Compliance**: The proposal complies with all relevant regulations and zoning laws, and there are no legal barriers to its implementation.
-      5. **Commitment to Accountability**: The developer demonstrates a clear plan for ongoing accountability, including mechanisms for addressing community concerns post-implementation.
+      1. Public Interest Alignment: The proposal must align with the long-term interests of the community, considering economic, environmental, and social impacts.
+      2. Mitigation of Negative Impacts: The developer has provided feasible solutions to mitigate significant negative impacts (e.g., traffic, noise, environmental concerns) raised by the community members.
+      3. Community Benefits: The project offers clear and measurable benefits to the community, such as improved infrastructure, job creation, or enhanced public spaces.
+      4. Regulatory Compliance: The proposal complies with all relevant regulations and zoning laws, and there are no legal barriers to its implementation.
+      5. Commitment to Accountability: The developer demonstrates a clear plan for ongoing accountability, including mechanisms for addressing community concerns post-implementation.
 
     Denial Criteria:
-      1. **Significant Unresolved Community Concerns**: Key issues raised by community members remain unaddressed or inadequately mitigated, posing potential risks to the community's well-being.
-      2. **Insufficient Public Benefit**: The project does not provide enough benefit to the community to justify the associated impacts or costs.
-      3. **Non-Compliance with Regulations**: The proposal fails to meet legal or regulatory standards, and no viable path exists to bring it into compliance.
-      4. **Lack of Transparency or Accountability**: The developer is unable or unwilling to commit to ongoing transparency, reporting, or community engagement after project approval.
-      5. **Environmental or Safety Risks**: The project presents unmitigated risks to public health, safety, or the local environment, making it incompatible with the community’s sustainability goals.
+      1. Significant Unresolved Community Concerns: Key issues raised by community members remain unaddressed or inadequately mitigated, posing potential risks to the community's well-being.
+      2. Insufficient Public Benefit: The project does not provide enough benefit to the community to justify the associated impacts or costs.
+      3. Non-Compliance with Regulations: The proposal fails to meet legal or regulatory standards, and no viable path exists to bring it into compliance.
+      4. Lack of Transparency or Accountability: The developer is unable or unwilling to commit to ongoing transparency, reporting, or community engagement after project approval.
+      5. Environmental or Safety Risks: The project presents unmitigated risks to public health, safety, or the local environment, making it incompatible with the community’s sustainability goals.
 
     Outcome:
-      - **Approval**: If all approval criteria are met and no denial criteria apply, the Government Representative may approve the policy, documenting any conditions or follow-up actions required.
-      - **Conditional Approval**: If some concerns remain but can be resolved through specific conditions, the Government Representative may grant conditional approval, stipulating required actions from the developer.
-      - **Denial**: If any denial criteria are met and cannot be adequately addressed, the Government Representative should deny the policy, providing a clear explanation of the reasons and any recommendations for project modifications if resubmission is an option.
+      - Approval: If all approval criteria are met and no denial criteria apply, the Government Representative may approve the policy, documenting any conditions or follow-up actions required.
+      - Conditional Approval: If some concerns remain but can be resolved through specific conditions, the Government Representative may grant conditional approval, stipulating required actions from the developer.
+      - Denial: If any denial criteria are met and cannot be adequately addressed, the Government Representative should deny the policy, providing a clear explanation of the reasons and any recommendations for project modifications if resubmission is an option.
