--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -11,8 +11,10 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.7",
     "d3": "^7.9.0",
+    "mapbox-gl": "^3.8.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-map-gl": "^7.1.7",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
