--- a/src/experiment/protocols/sample_protocol.yaml
+++ b/src/experiment/protocols/sample_protocol.yaml
@@ -1,20 +1,22 @@
 name: "sf_height_survey"
-description: "Evaluate agent opinions on different building heights in SF neighborhoods"
+description: "Evaluate agent opinions on building heights in SF"
 
-model: "stupid"    # which model to use for simulation
-population: 7      # number of agents to simulate
+# Model configuration
+model: "census"       # Model options: census, twolayer, stupid, basic
+population: 30        # Number of agents to simulate
 
+# Input data
 input:
-  proposals:       # list of input proposal files
-    - "sample_proposal.json"
+  proposals:
+    - "samples/sample_proposal.json"  # Path relative to data directory
 
-region: "san_francisco"    # target region
-
+# Evaluation settings
 evaluation:
-  metrics:
-    - type: "group_distribution"
-      ground_truth: "sample_group_distribution_gt.json"
+  ground_truth: "sf_prolific_survey/processed/survey_responses.json"
+  evaluators:
+    - "opinion_score"  # Corresponds to OpinionScoreEvaluator in evaluators/survey_evaluator.py
+    - "reason_match"   # Corresponds to ReasonMatchEvaluator in evaluators/survey_evaluator.py
 
+# Output settings
 output:
-  save_intermediate: true
   log_level: "INFO" 
